--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/TheBojda/my-wordpress-blog#readme",
   "dependencies": {
-    "fast-xml-parser": "^4.0.0-beta.6",
-    "turndown": "^7.1.1"
+    "ejs": "^3.1.8",
+    "fast-xml-parser": "^4.0.0-beta.6"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.1",
     "@types/node": "^16.11.11",
     "@types/turndown": "^5.0.1",
     "ts-node": "^10.4.0",
